--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div class="col-12 col-md-3 col-xl-2 kenki-sidebar">
   <nav class="kenki-links collapse" id="kenki-docs-nav" style="">
     <div class="kenki-toc-item">
-      <a href="/" class="kenki-toc-link">会社</a>
+      <a href="/companies" class="kenki-toc-link">会社</a>
     </div>
   </nav>
 </div>
