--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="navbar navbar-expand navbar-dark flex-column flex-md-row kenki-navbar">
+<header class="navbar sticky-top navbar-expand navbar-dark flex-column flex-md-row kenki-navbar">
   <a class="navbar-brand mr-0 mr-md-2" href="/" aria-label="建機カタログDB">建機カタログDB</a>
   <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
     <li class="nav-item">
