--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,9 +4,9 @@
     <li class="nav-item">
       <% if current_user %>
         <% if current_user.is_a? Administrator %>
-          <a class="nav-link" href="/admin_sessions/sign_out">ログアウト</a>
+          <%= link_to 'ログアウト', "/admin_sessions/sign_out", method: :delete %>
         <% else %>
-          <a class="nav-link" href="/sessions/sign_out">ログアウト</a>
+          <%= link_to 'ログアウト', "/sessions/sign_out", method: :delete %>
         <% end %>
       <% else %>
         <a class="nav-link">ログイン</a>
