--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -3,5 +3,8 @@
     <div class="kenki-toc-item">
       <a href="/companies" class="kenki-toc-link">会社</a>
     </div>
+    <div class="kenki-toc-item">
+      <a href="/categories" class="kenki-toc-link">分類</a>
+    </div>
   </nav>
 </div>
