--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -6,5 +6,8 @@
     <div class="kenki-toc-item">
       <a href="/categories" class="kenki-toc-link">分類</a>
     </div>
+    <div class="kenki-toc-item">
+      <a href="/sub_categories" class="kenki-toc-link">サブカテゴリ</a>
+    </div>
   </nav>
 </div>
