--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -9,5 +9,8 @@
     <div class="kenki-toc-item">
       <a href="/sub_categories" class="kenki-toc-link">サブカテゴリ</a>
     </div>
+    <div class="kenki-toc-item">
+      <a href="/products" class="kenki-toc-link">商品共通</a>
+    </div>
   </nav>
 </div>
