bugfix kenki_scaffold

--- a/lib/generators/kenki_scaffold/templates/views/index.json.jb.tt
+++ b/lib/generators/kenki_scaffold/templates/views/index.json.jb.tt
@@ -2,7 +2,7 @@
   {
     id: <%= @resource_name %>.id,
 <% @attribute_names.each do |attr_name| -%>
-    uid: <%= @resource_name %>.<%= attr_name %>,
+    <%= attr_name %>: <%= @resource_name %>.<%= attr_name %>,
 <% end -%>
     url: <%= @resource_name %>_url(<%= @resource_name %>, format: :json)
   }
