--- a/lib/generators/kenki_scaffold/templates/views/show.json.jb.tt
+++ b/lib/generators/kenki_scaffold/templates/views/show.json.jb.tt
@@ -1,7 +1,7 @@
 {
   id: @<%= @resource_name %>.id,
 <% @attribute_names.each do |attr_name| -%>
-  uid: @<%= @resource_name %>.uid,
+  <%= attr_name %>: @<%= @resource_name %>.<%= attr_name %>,
 <% end -%>
   created_at: @<%= @resource_name %>.created_at,
   updated_at: @<%= @resource_name %>.updated_at
