bugfix kenki_generator

--- a/lib/generators/kenki_scaffold/templates/views/show.html.erb.tt
+++ b/lib/generators/kenki_scaffold/templates/views/show.html.erb.tt
@@ -1,14 +1,14 @@
 <%%= link_to '<戻る', <%= @resource_name.pluralize %>_path %>
-<h2><%%= <% @resource_name.camelize %>.model_name.human %>詳細</h2>
+<h2><%%= <%= @resource_name.camelize %>.model_name.human %>詳細</h2>
 <%%= render 'shared/notice' %>
 <table class="table">
   <tr>
-    <th><%%= <% @resource_name.camelize %>.human_attribute_name :id %></th>
+    <th><%%= <%= @resource_name.camelize %>.human_attribute_name :id %></th>
     <td><%%= @<%= @resource_name %>.id %></td>
   </tr>
 <% @attribute_names.each do |attr_name| -%>
   <tr>
-    <th><%%= <% @resource_name.camelize %>.human_attribute_name :<%= attr_name %> %></th>
+    <th><%%= <%= @resource_name.camelize %>.human_attribute_name :<%= attr_name %> %></th>
     <td><%%= @<%= @resource_name %>.<%= attr_name %> %></td>
   </tr>
 <% end -%>
