--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -12,5 +12,8 @@
     <div class="kenki-toc-item">
       <a href="/products" class="kenki-toc-link">商品共通</a>
     </div>
+    <div class="kenki-toc-item">
+      <a href="/staffs" class="kenki-toc-link">ユーザー</a>
+    </div>
   </nav>
 </div>
