--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -32,7 +32,7 @@
       
         <td><%= link_to category.company.name, category.company if category.company %></td>
       
-        <td><%= category.name %></td>
+        <td><%= link_to category.name, category %></td>
       
         <td><%= category.position %></td>
       
