--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -4,6 +4,9 @@
       <a href="/companies" class="kenki-toc-link">会社</a>
     </div>
     <div class="kenki-toc-item">
+      <a href="/staffs" class="kenki-toc-link">ユーザー</a>
+    </div>
+    <div class="kenki-toc-item">
       <a href="/categories" class="kenki-toc-link">分類</a>
     </div>
     <div class="kenki-toc-item">
@@ -13,7 +16,14 @@
       <a href="/products" class="kenki-toc-link">商品共通</a>
     </div>
     <div class="kenki-toc-item">
-      <a href="/staffs" class="kenki-toc-link">ユーザー</a>
+      <div class="kenki-toc-text">属性</div>
+      <ul class="nav kenki-sub-nav">
+        <li>
+          <a href="/text_props" class="kenki-toc-link">URL</a>
+          <a href="/image_props" class="kenki-toc-link">画像</a>
+          <a href="/file_props" class="kenki-toc-link">ファイル</a>
+        </li>
+      </ul>
     </div>
   </nav>
 </div>
