サブカテゴリ入力追加

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -13,7 +13,7 @@
       <a href="/sub_categories" class="kenki-toc-link">サブカテゴリ</a>
     </div>
     <div class="kenki-toc-item">
-      <a href="/products" class="kenki-toc-link">商品共通</a>
+      <a href="/products" class="kenki-toc-link">商品</a>
     </div>
     <div class="kenki-toc-item">
       <div class="kenki-toc-text">属性</div>
