--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,7 +5,7 @@
 
 
 <br>
-<%= form_for :product, method: :get do |f| %>
+<%= form_for @product, method: :get do |f| %>
   <%= f.submit '検索', class: 'float-right btn btn-primary'  %>
   <div class="row col-md-10">
     <div class="col">
@@ -16,7 +16,7 @@
     </div>
     <div class="col">
       <div class="form-group row">
-        <%= f.select :category, Category.where(last: true).all.map { |c| [c.name, c.id] }, {}, class: 'form-control' %>
+        <%= f.select :category_id, Category.where(last: true).all.map { |c| [c.name, c.id] }, {include_blank: '-全ての最終カテゴリ-'}, class: 'form-control' %>
       </div>
     </div>
   </div>
