--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,6 +3,28 @@
 <%= link_to "新規#{Category.model_name.human}", new_category_path, class: 'float-right btn btn-primary' %>
 <h1><%= Category.model_name.human %></h1>
 
+<br>
+<%= form_for @category, method: :get do |f| %>
+  <%= f.submit '検索', class: 'float-right btn btn-primary'  %>
+  <div class="row col-md-11">
+    <div class="col">
+      <%= f.text_field :category_id, placeholder: '親分類ID', class: 'form-control' %>
+    </div>
+    <div class="col">
+      <div class="form-group row">
+        <%= f.select :company_id, Company.all.map { |c| [c.name, c.id] }, {include_blank: '-全会社-'}, class: 'form-control' %>
+      </div>
+    </div>
+    <div class="col">
+      <%= f.text_field :name, placeholder: '分類名', class: 'form-control' %>
+    </div>
+    <div class="col">
+      <%= f.select :last, [['-全カテゴリ-', ''], ['最終のみ', true], ['最終以外', false]], {}, class: 'form-control' %>
+    </div>
+  </div>
+<% end %>
+<br>
+
 <%= paginate @categories %>
 <table class="table">
   <thead>
