--- a/app/views/staffs/index.html.erb
+++ b/app/views/staffs/index.html.erb
@@ -3,6 +3,25 @@
 <%= link_to "新規#{Staff.model_name.human}", new_staff_path, class: 'float-right btn btn-primary' %>
 <h1><%= Staff.model_name.human %></h1>
 
+<br>
+<%= form_for @staff, method: :get do |f| %>
+  <%= f.submit '検索', class: 'float-right btn btn-primary'  %>
+  <div class="row col-md-10">
+    <div class="col">
+      <div class="form-group row">
+        <%= f.select :company_id, Company.all.map { |c| [c.name, c.id] }, {include_blank: '-全会社-'}, class: 'form-control' %>
+      </div>
+    </div>
+    <div class="col">
+      <%= f.text_field :login_name, placeholder: 'ログインID', class: 'form-control' %>
+    </div>
+    <div class="col">
+      <%= f.text_field :name, placeholder: '名前', class: 'form-control' %>
+    </div>
+  </div>
+<% end %>
+<br>
+
 <%= paginate @staffs %>
 <table class="table">
   <thead>
