--- a/lib/generators/kenki_scaffold/templates/controller.rb.tt
+++ b/lib/generators/kenki_scaffold/templates/controller.rb.tt
@@ -5,6 +5,7 @@ class <%= @resource_name.pluralize.camelize %>Controller < ApplicationController
   before_action :fetch_resources, only: [:index]
 
   def index
+    @<%= @resource_name %> = <%= @resource_name.camelize %>.new(search_params[:<%= @resource_name %>])
   end
 
   def show
@@ -58,11 +59,11 @@ class <%= @resource_name.pluralize.camelize %>Controller < ApplicationController
   end
 
   def search_params
-    params.permit(<%= @resource_name.camelize %>.search_attribute_names)
+    params.permit(<%= @resource_name %>: <%= @resource_name.camelize %>.search_attribute_names)
   end
 
   def fetch_resources
-    @<%= @resource_name.pluralize %> = <%= @resource_name.camelize %>.search(search_params).pagination_by_params(params)
+    @<%= @resource_name.pluralize %> = <%= @resource_name.camelize %>.search(search_params[:<%= @resource_name %>]).pagination_by_params(params)
   end
 
   def fetch_resource
