--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,11 +1,15 @@
 <div class="col-12 col-md-3 col-xl-2 kenki-sidebar">
   <nav class="kenki-links collapse" id="kenki-docs-nav" style="">
+  <% if can? :create, Company  -%>
     <div class="kenki-toc-item">
       <a href="/companies" class="kenki-toc-link">会社</a>
     </div>
+  <% end -%>
+  <% if can? :create, Staff -%>
     <div class="kenki-toc-item">
       <a href="/staffs" class="kenki-toc-link">ユーザー</a>
     </div>
+  <% end -%>
     <div class="kenki-toc-item">
       <a href="/categories" class="kenki-toc-link">分類</a>
     </div>
