--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -8,7 +8,7 @@
     
       <%= f.input :product_code %>
     
-      <%= f.association :category, collection: Category.where(last: true).map { |c| [c.name, c.id] }, prompt: '最終カテゴリを選択' %>
+      <%= f.association :category, collection: Category.accessible_by(current_ability).where(last: true).map { |c| [c.name, c.id] }, prompt: '最終カテゴリを選択' %>
 
       <h5>サブカテゴリ</h5>
       <div id="product_sub_categories">
