--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -12,11 +12,11 @@
     <div class="col">
       <%= f.text_field :category_id, placeholder: '親分類ID', class: 'form-control' %>
     </div>
-    <div class="col">
-      <div class="form-group row">
-        <%= f.select :company_id, Company.all.map { |c| [c.name, c.id] }, {include_blank: '-全会社-'}, class: 'form-control' %>
-      </div>
-    </div>
+<%#    <div class="col">%>
+<%#      <div class="form-group row">%>
+<%#        <%= f.select :company_id, Company.all.map { |c| [c.name, c.id] }, {include_blank: '-全会社-'}, class: 'form-control' +|%>
+<%#      </div>%>
+<%#    </div>%>
     <div class="col">
       <%= f.text_field :name, placeholder: '分類名', class: 'form-control' %>
     </div>
@@ -39,8 +39,6 @@
     
       <th><%= Category.human_attribute_name :name %></th>
     
-      <th><%= Category.human_attribute_name :position %></th>
-    
       <th><%= Category.human_attribute_name :last %></th>
     
       <th></th>
@@ -54,11 +52,9 @@
       
         <td><%= category.category_id %></td>
       
-        <td><%= link_to category.company.name, category.company if category.company %></td>
+        <td><%= category.company.name %></td>
       
         <td><%= link_to category.name, category %></td>
-      
-        <td><%= category.position %></td>
       
         <td><%= category.last %></td>
       
