--- a/app/views/api_test/index.html.erb
+++ b/app/views/api_test/index.html.erb
@@ -10,13 +10,13 @@
       <div class="form-group row">
         <label for="path" class="col-sm-2 col-form-label">Path</label>
         <div class="col-sm-10">
-          <input id="path" type="text" placeholder="Path" class="form-control">
+          <input id="path" type="text" placeholder="Path" class="form-control" v-model="path">
         </div>
       </div>
       <div class="form-group row">
         <label for="method" class="col-sm-2 col-form-label">Method</label>
         <div class="col-sm-10">
-          <select id="method" class="form-control">
+          <select id="method" class="form-control" v-model="method">
             <option>GET</option>
             <option>POST</option>
             <option>PATCH</option>
@@ -24,16 +24,16 @@
           </select>
         </div>
       </div>
-      <div class="form-group row">
-        <label for="token" class="col-sm-2 col-form-label">Token</label>
-        <div class="col-sm-10">
-          <input id="token" type="text" placeholder="Token" class="form-control">
-        </div>
-      </div>
+<%#      <div class="form-group row">%>
+<%#        <label for="token" class="col-sm-2 col-form-label">Token</label>%>
+<%#        <div class="col-sm-10">%>
+<%#          <input id="token" type="text" placeholder="Token" class="form-control" v-model="token">%>
+<%#        </div>%>
+<%#      </div>%>
       <div class="form-group row">
         <label for="params" class="col-sm-2 col-form-label">Parameters</label>
         <div class="col-sm-10">
-          <div class="row">
+          <div class="row" v-for="(param, index) in params">
             <div class="col-sm-5">
               <input id="token" type="text" placeholder="Key" class="form-control">
             </div>
@@ -41,30 +41,30 @@
               <input id="token" type="text" placeholder="Value" class="form-control">
             </div>
             <div class="col-sm-2">
-              <button type="button" class="btn btn-link">-Del</button>
+              <button type="button" class="btn btn-link" @click=delParam(index)>-Del</button>
             </div>
           </div>
           <div class="row" style="margin-top: 10px">
             <div class="col-sm-12">
-              <button type="button" class="btn btn-link">+Add</button>
+              <button type="button" class="btn btn-link" @click="addParam">+Add</button>
             </div>
           </div>
         </div>
       </div>
       <hr>
-      <button type="button" class="btn btn-primary">Send</button>
+      <button type="button" class="btn btn-primary" @click="send">Send</button>
     </div>
     <div class="col-sm-6">
       <h3>Response</h3>
       <div class="form-group row">
         <label for="status" class="col-sm-2 col-form-label">Status</label>
         <div class="col-sm-10">
-          <%# todo %>
+          <input type="text" v-model="status" readonly class="form-control">
         </div>
       </div>
       <div class="form-group">
         <label for="body">Body</label>
-        <textarea class="form-control" rows="10"></textarea>
+        <textarea class="form-control" rows="10" v-model="result"></textarea>
       </div>
     </div>
   </div>
@@ -74,7 +74,48 @@
 var app = new Vue({
   el: '#app',
   data: {
-    message: 'Hello Vue!'
+    message: 'Hello Vue!',
+    params: [],
+    method: 'GET',
+    token: '',
+    status: '',
+    result: '',
+    path: ''
+  },
+  created() {
+    this.addParam()
+  },
+  methods: {
+    addParam() {
+      this.params.push({key: '', value: ''})
+    },
+    delParam(index) {
+      this.params.splice(index, 1)
+    },
+    send() {
+      let headers = {}
+      if (this.token && this.token.length > 0) {
+        headers['Authorization'] = `Token ${this.token}`
+      }
+      let data = {}
+      for (const param of this.params) {
+        if (param.key && param.key.length > 0) {
+          data[param.key] = param.value
+        }
+      }
+      $.ajax({
+        url: `${location.origin}/${this.path}`,
+        type: this.method,
+        headers: headers,
+        data: data,
+      }).done((data, textStatus) => {
+        this.result = JSON.stringify(data, null, '  ')
+        this.status = 200
+      }).fail((jqXHR, textStatus) => {
+        this.result = '[ERROR]'
+        this.status = jqXHR.statusCode().status
+      });
+    }
   }
 })
 </script>
